<resources>
    <string name="app_name">Music</string>
    <string name="artist_name">Nirvana</string>
    <string name="song_name">Come As You Are</string>
    <string name="album_name">Smells Lİke Teens spirit</string>
    <string name="now_playing">Now Playing</string>
    <string name="move_on">More From The Artist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>